--- a/MLcourse/app-introRStudio.html
+++ b/MLcourse/app-introRStudio.html
@@ -25,14 +25,14 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2018-02-12">
+<meta name="date" content="2018-02-15">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="pw-4.html">
+<link rel="prev" href="pw-5.html">
 <link rel="next" href="app-ht.html">
 <script src="book_assets/jquery-2.2.3/jquery.min.js"></script>
 <link href="book_assets/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -213,6 +213,19 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="" data-path="pw-4.html"><a href="pw-4.html#quadratic-discriminant-analysis-qda-1"><i class="fa fa-check"></i>Quadratic Discriminant Analysis (QDA)</a></li>
 <li class="chapter" data-level="" data-path="pw-4.html"><a href="pw-4.html#comparison"><i class="fa fa-check"></i>Comparison</a></li>
 </ul></li>
+<li class="chapter" data-level="5" data-path="model-selection.html"><a href="model-selection.html"><i class="fa fa-check"></i><b>5</b> Model Selection</a><ul>
+<li class="chapter" data-level="5.1" data-path="model-selection.html"><a href="model-selection.html#linear-model-selection-and-best-subset-selection"><i class="fa fa-check"></i><b>5.1</b> Linear Model Selection and Best Subset Selection</a></li>
+<li class="chapter" data-level="5.2" data-path="model-selection.html"><a href="model-selection.html#forward-stepwise-selection"><i class="fa fa-check"></i><b>5.2</b> Forward Stepwise Selection</a></li>
+<li class="chapter" data-level="5.3" data-path="model-selection.html"><a href="model-selection.html#backward-stepwise-selection"><i class="fa fa-check"></i><b>5.3</b> Backward Stepwise Selection</a></li>
+<li class="chapter" data-level="5.4" data-path="model-selection.html"><a href="model-selection.html#estimating-test-error-using-mallows-cp-aic-bic-adjusted-r-squared"><i class="fa fa-check"></i><b>5.4</b> Estimating Test Error Using Mallow’s Cp, AIC, BIC, Adjusted R-squared</a></li>
+<li class="chapter" data-level="5.5" data-path="model-selection.html"><a href="model-selection.html#estimating-test-error-using-cross-validation"><i class="fa fa-check"></i><b>5.5</b> Estimating Test Error Using Cross-Validation</a></li>
+<li class="chapter" data-level="5.6" data-path="model-selection.html"><a href="model-selection.html#examples"><i class="fa fa-check"></i><b>5.6</b> Examples</a><ul>
+<li class="chapter" data-level="5.6.1" data-path="model-selection.html"><a href="model-selection.html#best-subset-selection"><i class="fa fa-check"></i><b>5.6.1</b> Best Subset Selection</a></li>
+<li class="chapter" data-level="5.6.2" data-path="model-selection.html"><a href="model-selection.html#forward-stepwise-selection-and-model-selection-using-validation-set"><i class="fa fa-check"></i><b>5.6.2</b> Forward Stepwise Selection and Model Selection Using Validation Set</a></li>
+<li class="chapter" data-level="5.6.3" data-path="model-selection.html"><a href="model-selection.html#model-selection-using-cross-validation"><i class="fa fa-check"></i><b>5.6.3</b> Model Selection Using Cross-Validation</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="pw-5.html"><a href="pw-5.html"><i class="fa fa-check"></i>PW 5</a></li>
 <li class="appendix"><span><b>Appendix</b></span></li>
 <li class="chapter" data-level="A" data-path="app-introRStudio.html"><a href="app-introRStudio.html"><i class="fa fa-check"></i><b>A</b> Introduction to <code>RStudio</code></a></li>
 <li class="chapter" data-level="B" data-path="app-ht.html"><a href="app-ht.html"><i class="fa fa-check"></i><b>B</b> Review on hypothesis testing</a></li>
@@ -253,7 +266,7 @@ Figure A.1: Main window of <code>RStudio</code>. The red shows the code panel an
           </div>
         </div>
       </div>
-<a href="pw-4.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="pw-5.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="app-ht.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
